--- a/login.html
+++ b/login.html
@@ -33,16 +33,25 @@
                 <div class="form-box">
                     <h2>Đăng nhập</h2>
                     <form action="" method="post">
-                        <label for="account" class="form-label">Tài khoản</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
-                        <input class="input-box form-control" type="textbox" placeholder="Email" id="account" name="account" title="Vui lòng nhập email">
-                        <label for="password" class="form-label">Mật khẩu</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control " type="password" placeholder="Mật khẩu" id="password" name="password" title="Vui lòng nhập mật khẩu">
+
+                        <div class="form-group">
+                            <label for="account" class="form-label">Tài khoản</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
+                            <input class="input-box form-control" type="textbox" placeholder="Email" id="account" name="account" title="Vui lòng nhập email">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password" class="form-label">Mật khẩu</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
+                            <input class="input-box form-control " type="password" placeholder="Mật khẩu" id="password" name="password" title="Vui lòng nhập mật khẩu">
+                        </div>
+
+                        <div class="d-grid m-4">
+                            <button type="submit" class="btn btn-dark">Đăng nhập</button>
+                        </div>
+
                     </form>
-                    <div class="d-grid m-4">
-                        <button type="submit" class="btn btn-dark">Đăng nhập</button>
-                    </div>
+                    
                     <div class="alr-have-acc">
                         <p class="text-center"><a href="#">Quên mật khẩu?</a> <a href="./register.html">Đăng ký</a></p>
                     </div>
