--- a/about.html
+++ b/about.html
@@ -11,26 +11,28 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     </head>
-<body>
-    <header id="header">
-        <div class="container">
-            <h1 class="logo">CGA</h1>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Trang chủ</a></li>
-                    <li><a href="#">Giới thiệu</a></li>
-                    <li><a href="products.html">Sản phẩm</a></li>
-                    <li><a href="cart.html">Giỏ hàng</a></li>
-                    <li><a href="login.html">Đăng nhập</a></li>
-                    <li><a href="register.html">Đăng ký</a></li>
-                    <li><a href="contact.html">Liên hệ</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+
+    <body>
+        <header id="header">
+            <div class="container">
+                <h1 class="logo">CGA</h1>
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="index.html">Trang chủ</a></li>
+                        <li><a href="#">Giới thiệu</a></li>
+                        <li><a href="products.html">Sản phẩm</a></li>
+                        <li><a href="cart.html">Giỏ hàng</a></li>
+                        <li><a href="login.html">Đăng nhập</a></li>
+                        <li><a href="register.html">Đăng ký</a></li>
+                        <li><a href="contact.html">Liên hệ</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
     <main id="gioithieu">
+        <h1>Giới thiệu về CGA</h1>
         <div class="box">
-        <video id="video_gioithieu" controls muted loop>
+        <video id="video_gioithieu" controls poster="images/thumbnail.jpg" >
             <source src="images/video_gioithieu.mp4" type="video/mp4">
         </video>
         </div>
@@ -52,10 +54,10 @@
             </ul>
             <p>Một số hình ảnh về rạp phim của chúng tôi:</p>
             <div class="container_gallery">
-            <img class="image1" src="images/pho1.jpg">
-            <img class="image2" src="images/pho2.jpg">
-            <img class="image3" src="images/pho3.jpg">
-            <img class="image4" src="images/pho4.jpg">
+                <img class="image1" src="images/pho1.jpg">
+                <img class="image2" src="images/pho2.jpg">
+                <img class="image3" src="images/pho3.jpg">
+                <img class="image4" src="images/pho4.jpg">
             </div>
             <p>Vì vậy còn chần chừ gì nữa hãy đến ngay CGA để tận hưởng những siêu phẩm điện ảnh trong không gian đẳng cấp, chất lượng tuyệt vời! Trải nghiệm hình ảnh sắc nét, âm thanh sống động cùng dịch vụ chuyên nghiệp chắc chắn sẽ mang đến cho bạn những giây phút giải trí trọn vẹn. Đặt vé ngay hôm nay để không bỏ lỡ những bộ phim hấp dẫn nhất! 🎬✨</p>
         </div>
