--- a/register.html
+++ b/register.html
@@ -81,13 +81,12 @@
                     <div class="form-group">
                         <label for="urs-name" class="form-label">Nhập lại mật khẩu</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control " type="textbox" placeholder="Nhập lại mật khẩu" id="confirm-password" name="confirmPassword" title="Vui lòng nhập lại mật khẩu">
+                        <input class="input-box form-control " type="password" placeholder="Nhập lại mật khẩu" id="confirm-password" name="confirmPassword" title="Vui lòng nhập lại mật khẩu">
                     </div>
 
                     <div class="d-grid m-4">
                         <button type="submit" class="btn btn-dark">Đăng ký</button>
                     </div>
-
                 </form>
                 
                 <div class="alr-have-acc">
