--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
 
             <div id = "div_ContentAndImgProduct">
                 <div id="BoLoc">
-                    <select name="TheLoai" id="The_Loai" aria-placeholder="Thể Loại">
+                    <select name="TheLoai" id="The_Loai" title="Thể loại" >
                         <option value="All" disabled selected>Thể Loại</option>
                         <option value="All">Tất Cả</option>
                         <option value="hoat_hinh">Hoạt Hình</option>
@@ -45,7 +45,7 @@
                         <option value="tre_em">Trẻ Em</option>
                    </select>
     
-                   <select name="thoi_luong" id="thoi_luong" aria-placeholder="Thời Lượng">
+                   <select name="thoi_luong" id="thoi_luong" title="Thời lượng">
                         <option value="All_thoiluong" disabled selected>Thời Lượng</option>
                         <option value="All_thoiluong">Tất Cả</option>
                         <option value="i45">Dưới 45 Phút</option>
@@ -53,7 +53,7 @@
                         <option value="tren60">Trên 60</option>
     
                    </select>
-                   <input type="submit" name="chon" id="Chon" value=" Chọn " onclick="selectTypeOfFilm()"></i>
+                   <input type="submit" name="chon" id="Chon" value=" Chọn " onclick="selectTypeOfFilm()">
                 </div>
                 <div class="aSectionPhim hoat_hinh tre_em hanh_dong tren60">                
                     <section class="phim_Product">
