--- a/cart.html
+++ b/cart.html
@@ -9,11 +9,15 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+        <script src="./js/scripts.js"></script>
     </head>
 <body>
     <header id="header">
         <div class="container">
-            <h1 class="logo">CGA</h1>
+            <div class="logo">
+                <a href="index.html"><h1>CGA</h1></a>
+                <img src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
+            </div>
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Trang chủ</a></li>
