--- a/products.html
+++ b/products.html
@@ -8,18 +8,21 @@
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-        <script src="/js/scripts.js"></script>
+        <script src="./js/scripts.js"></script>
     </head>
     
     <body id = "body_Product">
         <header id="header">
             <div class="container">
-                <h1 class="logo">CGA</h1>
+                <div class="logo">
+                    <a href="index.html"><h1>CGA</h1></a>
+                    <img src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
+                </div>
                 <nav class="navbar">
                     <ul>
                         <li><a href="index.html">Trang chủ</a></li>
                         <li><a href="about.html">Giới thiệu</a></li>
-                        <li><a href="products.html">Sản phẩm</a></li>
+                        <li><a href="#">Sản phẩm</a></li>
                         <li><a href="cart.html">Giỏ hàng</a></li>
                         <li><a href="login.html">Đăng nhập</a></li>
                         <li><a href="register.html">Đăng ký</a></li>
