--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="aSectionPhim hoat_hinh tre_em hanh_dong tren60">                
                     <section class="phim_Product">
-                        <img src="/images/phim1.jpg" alt="" class="img_Product">
+                        <img src="/images/phim1.jpg" alt="" class="img_Product" onclick="MobileGetTicket(0)">
                         <div class="name_movie"><b>Na Tra <br>Ma Đồng Đáo Hải</b></div>
                         <div class="div_Content">
                             <table>
@@ -80,7 +80,8 @@
                         <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(0)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div>
-                    </section> </div>
+                    </section> 
+                </div>
  
                 <div class ="aSectionPhim tre_em hoat_hinh i45">                
                     <section class="phim_Product">
