--- a/register.html
+++ b/register.html
@@ -66,11 +66,11 @@
                         <label class="form-label">Giới tính</label>
                         <div class="genderOp">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio"  name="gender" value="male" required>
+                                <input class="form-check-input" type="radio"  name="gender" value="male">
                                 <label class="form-check-lable" for="male">Nam</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio"  name="gender" value="female" required>
+                                <input class="form-check-input" type="radio"  name="gender" value="female">
                                 <label class="form-check-lable" for="female">Nữ</label>
                             </div>
                         </div>
