--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
             <div class="login form-container">
                 <div class="form-box">
                     <h2>Đăng nhập</h2>
-                    <form action="" method="post" id="login-frm">
+                    <form action="" method="post" id="frm">
 
                         <div class="form-group">
                             <label for="account" class="form-label">Tài khoản</label>
