--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
                     <div class="form-group">
                         <label for="phone-number" class="form-label">Số điện thoại</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/phone.png"></span>
-                        <input class="input-box form-control" type="textbox" placeholder="Số điện thoại" id="phone-number" name="phoneNumber" title="Vui lòng nhập số điện thoại">
+                        <input class="input-box form-control" type="textbox" placeholder="Số điện thoại" id="phone-number" name="phoneNumber" title="Vui lòng nhập số điện thoại" onkeypress="return isNumber(event)">
                         <span class="error-mess"></span>
                     </div>
     
