--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,55 @@
 
     </header>
     <main>
-
-        
+        <main id="lienhe">
+            <h1>Liên hệ với chúng tôi</h1>
+            <div class="box_lienhe">
+                <div class="text_lienhe">
+                    <p class="dau_lienhe">Trụ sở chính</p>
+                    <p class="noidung_lienhe">Địa chỉ: 123, Ninh Kiều, Cần Thơ</p>
+                    <p class="dau_lienhe">Dịch vụ khách hàng</p>
+                    <p class="noidung_lienhe">Hotline: 123-456-78</p>
+                    <p class="noidung_lienhe">Làm việc từ 8h - 22h hàng ngày bao gồm cả ngày Lễ Tết</p>
+                    <p class="noidung_lienhe">Email hỗ trợ: hotro@cga.vn</p>
+                    <p class="dau_lienhe">Liên hệ quảng cáo</p>
+                    <p class="noidung_lienhe">Phòng kinh doanh: 9999999</p>
+                    <p class="noidung_lienhe">Email: ad@cga.vn</p>
+                    <p class="dau_lienhe">Liên hệ hợp tác</p>
+                    <p class="noidung_lienhe">Phòng hợp tác: 8888888</p>
+                    <p class="noidung_lienhe">Email: works@cga.vn</p>
+                    <p class="dau_lienhe">Liên hệ báo chí</p>
+                    <p class="noidung_lienhe">Phòng báo chí: 7777777</p>
+                    <p class="noidung_lienhe">Email: news@cga.vn</p>
+                </div>
+                <div class="form_feedback" >
+                    <h2>Phản hồi</h2>
+                    <form action="feedback.php" method="post">
+                        <table class="form_table">
+                            <tr>
+                                <td><label for="name">Họ và tên:</label></td>
+                                <td><input type="text" id="name" name="name" required placeholder="Nhập họ và tên"></td>
+                            </tr>
+                            <tr>
+                                <td><label for="email">Email:</label></td>
+                                <td><input type="email" id="email" name="email" required placeholder="Nhập email"></td>
+                            </tr>
+                            <tr>
+                                <td><label for="phone">Số điện thoại:</label></td>
+                                <td><input type="tel" id="phone" name="phone" required placeholder="Nhập số điện thoại"></td>
+                            </tr>
+                            <tr>
+                                <td><label for="feedback">Nội dung phản hồi:</label></td>
+                                <td><textarea id="feedback" name="feedback" required placeholder="Nhập nội dung phản hồi"></textarea></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td><button class="button_sub" type="submit">Gửi</button></td>
+                            </table>
+                    </form>
+                </div>
+            </div>
+            
+        </main>
     </main>
     <footer id="footer">
         <div class="container footer-nav">
