--- a/products.html
+++ b/products.html
@@ -5,13 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sản Phẩm</title>
         <link rel="icon" href="./images/logo.ico">
-       
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
         <script src="./js/scripts.js"></script>
     </head>
-    
     <body id = "body_Product">
         <header id="header">
             <div class="container">
@@ -64,7 +62,7 @@
                 </div>
                 <div class="aSectionPhim hoat_hinh tre_em hanh_dong tren60">                
                     <section class="phim_Product">
-                        <img src="/images/phim1.jpg" alt="" class="img_Product" onclick="MobileGetTicket(0)">
+                        <img src="/images/phim1.jpg" alt="" class="img_Product" >
                         <div class="name_movie"><b>Na Tra <br>Ma Đồng Đáo Hải</b></div>
                         <div class="div_Content">
                             <table>
