--- a/register.html
+++ b/register.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký</title>
     <link rel="icon" href="./images/logo.ico">
-    <link rel="stylesheet" href="./css/style.css">
+   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
   
 
@@ -21,18 +22,20 @@
                 <a href="index.html"><h1>CGA</h1></a>
                 <img src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
             </div>
+
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html" id="nav">Trang chủ</a></li>
-                    <li><a href="about.html" id="nav">Giới thiệu</a></li>
-                    <li><a href="products.html" id="nav">Sản phẩm</a></li>
-                    <li><a href="cart.html" id="nav">Giỏ hàng</a></li>
-                    <li><a href="login.html" id="nav">Đăng nhập</a></li>
-                    <li><a href="#" id="nav">Đăng ký</a></li>
-                    <li><a href="contact.html" id="nav">Liên hệ</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
+                    <li><a href="about.html">Giới thiệu</a></li>
+                    <li><a href="products.html">Sản phẩm</a></li>
+                    <li><a href="cart.html">Giỏ hàng</a></li>
+                    <li><a href="login.html">Đăng nhập</a></li>
+                    <li><a href="#">Đăng ký</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </nav>
         </div>
+
     </header>
     <main  class="form-center" id="main-content">
         <div class="form-container">
