--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
                     <li><a href="products.html">Sản phẩm</a></li>
                     <li><a href="cart.html">Giỏ hàng</a></li>
                     <li><a href="login.html">Đăng nhập</a></li>
-                    <li><a href="#">Đăng ký</a></li>
+                    <li><a href="#" class="active">Đăng ký</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </nav>
