--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <nav class="navbar">
                     <ul>
                         <li><a href="index.html">Trang chủ</a></li>
-                        <li><a href="#">Giới thiệu</a></li>
+                        <li><a href="#" class="active">Giới thiệu</a></li>
                         <li><a href="products.html">Sản phẩm</a></li>
                         <li><a href="cart.html">Giỏ hàng</a></li>
                         <li><a href="login.html">Đăng nhập</a></li>
