--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href="products.html">Sản phẩm</a></li>
-                    <li><a href="#">Giỏ hàng</a></li>
+                    <li><a href="#" class="active">Giỏ hàng</a></li>
                     <li><a href="login.html">Đăng nhập</a></li>
                     <li><a href="register.html">Đăng ký</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
