--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <li><a href="cart.html">Giỏ hàng</a></li>
                     <li><a href="login.html">Đăng nhập</a></li>
                     <li><a href="register.html">Đăng ký</a></li>
-                    <li><a href="#">Liên hệ</a></li>
+                    <li><a href="#" class="active">Liên hệ</a></li>
                 </ul>
             </nav>
         </div>
