--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                     <li><a href="about.html">Giới thiệu</a></li>
                     <li><a href="products.html">Sản phẩm</a></li>
                     <li><a href="cart.html">Giỏ hàng</a></li>
-                    <li><a href="#">Đăng nhập</a></li>
+                    <li><a href="#" class="active">Đăng nhập</a></li>
                     <li><a href="register.html">Đăng ký</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
