--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><a href="index.html">Trang chủ</a></li>
                         <li><a href="about.html">Giới thiệu</a></li>
-                        <li><a href="#">Sản phẩm</a></li>
+                        <li><a href="#" class="active">Sản phẩm</a></li>
                         <li><a href="cart.html">Giỏ hàng</a></li>
                         <li><a href="login.html">Đăng nhập</a></li>
                         <li><a href="register.html">Đăng ký</a></li>
