--- a/cart.html
+++ b/cart.html
@@ -32,9 +32,21 @@
         </div>
 
     </header>
-    <main>
-
-        
+    <main id="main_Cart">
+        <div id="Cart_left"> <br><br><br><br><br><br><br><br><br><br></div>
+        <div id = "Cart_center">
+            <div id = "film_choosed"><br><br><br><br><br></div>
+            <div id = "another_option">
+                <select name="chongoi" id="">
+                    <option value="" disabled>Ghế Ngồi</option>
+                    <option value="">Ghế Vip</option>
+                    <option value="">Ghế Couple</option>
+                    <option value="">Ghế Cao Cấp</option>
+                    <option value="">Ghế Phổ Thông</option>
+                </select>
+            </div>
+        </div>
+        <div id = "Cart_right"> <br><br><br><br><br></div>
     </main>
     <footer id="footer">
         <div class="container footer-nav">
