--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(0)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -121,7 +121,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(1)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -145,7 +145,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(2)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -171,7 +171,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(3)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -197,7 +197,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(4)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -222,7 +222,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(5)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -247,7 +247,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(6)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -272,7 +272,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(7)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -297,7 +297,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(8)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -322,7 +322,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(9)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -355,7 +355,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(0)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -380,7 +380,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(1)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -408,7 +408,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(2)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -439,7 +439,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(3)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
@@ -465,7 +465,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(4)"></i>
+                                <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart"></i>
                             </div>
                         </section>
