--- a/products.html
+++ b/products.html
@@ -78,8 +78,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(0)"></i>
-                        <i class="fa-solid fa-cart-shopping Cart"></i>
+                        <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                        <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div>
                     </section> 
                 </div>
@@ -102,8 +102,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(1)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div>
                     </section> 
                 </div>
@@ -126,8 +126,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(2)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div>
                     </section> 
                 </div>
@@ -151,8 +151,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(3)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div>
                     </section> 
                 </div>
@@ -177,8 +177,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(4)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div>
                     </section> 
                 </div>
@@ -202,8 +202,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(5)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div> 
                     </section> 
                 </div>
@@ -226,8 +226,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(6)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div> 
                     </section> 
                 </div>
@@ -250,8 +250,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(7)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div> 
                     </section> 
                 </div>
@@ -275,8 +275,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(8)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div> 
                     </section> 
                 </div>
@@ -300,8 +300,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(9)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div> 
                     </section>
                 </div>
@@ -325,8 +325,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(10)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this0)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div> 
                     </section>
                 </div>
@@ -350,8 +350,8 @@
                         </table>
                     </div>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(11)"></i>
-                        <i class="fa-solid fa-cart-shopping Cart"></i>
+                        <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this1)"></i>
+                        <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                     </div> 
                     </section> 
                 </div>
@@ -374,8 +374,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(12)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this2)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div>
                     </section>
                 </div>
@@ -399,8 +399,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(13)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this3)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div>
                     </section> 
                 </div>
@@ -424,8 +424,8 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(14)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this4)"></i>
+                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
                         </div> 
                     </section>
                 </div>
