--- a/login.html
+++ b/login.html
@@ -40,20 +40,22 @@
         <div class="login form-container">
             <div class="form-box">
                 <h2>Đăng nhập</h2>
-                <form action="" method="post" id="frm">
+                <form action="" method="post" id="frm" onsubmit="return formValidate()">
 
                     <div class="form-group">
                         <label for="email" class="form-label">Tài khoản</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
-                        <input class="input-box form-control" type="textbox" placeholder="Email" id="email" name="email"
-                            title="Vui lòng nhập email">
+                        <input class="input-box form-control" type="textbox" placeholder="Email" id="email"
+                            name="email">
+                        <span class="error-mess"></span>
                     </div>
 
                     <div class="form-group">
                         <label for="password" class="form-label">Mật khẩu</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
                         <input class="input-box form-control " type="password" placeholder="Mật khẩu" id="password"
-                            name="password" title="Vui lòng nhập mật khẩu">
+                            name="password">
+                        <span class="error-mess"></span>
                     </div>
                     <div class="form-group">
                         <input class="form-check-input " type="checkbox" id="remember">
