--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,34 @@
                 </div>
                 <div class="form_feedback" >
                     <h2>Phản hồi</h2>
-                    <form action="feedback.php" method="post">
-                        <table class="form_table">
+                    <form action="" method="post">
+                        <div class="form_table">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">Họ và tên</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nhập họ tên">
+                              </div>
+                              <div class="mb-3">
+                                <label for="formGroupExampleInput2" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Nhập email">
+                              </div>
+                                <div class="mb-3">
+                                    <label for="formGroupExampleInput2" class="form-label">Số điện thoại</label>
+                                    <input type="tel" class="form-control" id="formGroupExampleInput2" placeholder="Nhập số điện thoại">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="formGroupExampleInput2" class="form-label">Nội dung phản hồi</label>
+                                    <textarea class="form-control" id="formGroupExampleInput2" placeholder="Nhập nội dung phản hồi"></textarea>
+                                </div>
+                                <div class="d-flex flex-row-reverse ">
+                                    <button class="p-2 button_sub">Gửi</input>
+                                  </div>
+                                
+                        </div>
+                        
+                        <!-- <table class="form_table">
                             <tr>
                                 <td><label for="name">Họ và tên:</label></td>
-                                <td><input type="text" id="name" name="name" required placeholder="Nhập họ và tên"></td>
+                                <td><input class="form-control" type="text" id="name" name="name" required placeholder="Nhập họ và tên"></td>
                             </tr>
                             <tr>
                                 <td><label for="email">Email:</label></td>
@@ -76,7 +99,8 @@
                             <tr>
                                 <td></td>
                                 <td><button class="button_sub" type="submit">Gửi</button></td>
-                            </table>
+                            </tr>
+                        </table> -->
                     </form>
                 </div>
             </div>
