--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
         <script src="./js/scripts.js"></script>
     </head>
-    <body id = "body_Product">
+    <body id = "body_Product" onload="clearLocalStore()">
         <header id="header">
             <div class="container">
                 <div class="logo">
@@ -79,7 +79,7 @@
                         </div>
                         <div class="div_Icon">
                         <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                        <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                        <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_1')"></i>
                         </div>
                     </section> 
                 </div>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_2')"></i>
                         </div>
                     </section> 
                 </div>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div>
                     </section> 
                 </div>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div>
                     </section> 
                 </div>
@@ -178,7 +178,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div>
                     </section> 
                 </div>
@@ -203,7 +203,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div> 
                     </section> 
                 </div>
@@ -227,7 +227,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div> 
                     </section> 
                 </div>
@@ -251,7 +251,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div> 
                     </section> 
                 </div>
@@ -276,7 +276,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div> 
                     </section> 
                 </div>
@@ -301,7 +301,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div> 
                     </section>
                 </div>
@@ -326,7 +326,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this0)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div> 
                     </section>
                 </div>
@@ -351,7 +351,7 @@
                     </div>
                     <div class="div_Icon">
                         <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this1)"></i>
-                        <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                        <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                     </section> 
                 </div>
@@ -375,7 +375,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this2)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div>
                     </section>
                 </div>
@@ -400,7 +400,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this3)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div>
                     </section> 
                 </div>
@@ -425,7 +425,7 @@
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this4)"></i>
-                            <a href="cart.html"><i class="fa-solid fa-cart-shopping Cart"></i></a>
+                            <i class="fa-solid fa-cart-shopping Cart"></i>
                         </div> 
                     </section>
                 </div>
