--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_2')"></i>
                             </div>
                         </section>
                     </div>
@@ -122,7 +122,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_3')"></i>
                             </div>
                         </section>
                     </div>
